syntax = "proto3";

package auth;
option go_package = "../../pkg/pb;authgrpc";


message ValidateRequest {
    string access_token = 1;
  }

message ValidateResponse {
    bool is_valid = 1;
    string uid =2;
    string user_type = 3;
  }