syntax = "proto3";

package home;
option go_package = "../../pkg/pb";


message UpdateFlatRequest {
    int32 id = 1 ;
    string status = 2 ;
}

message UpdateFlatResponse {
    int32 id = 1;
    int32 house_id = 2 ;
    int32 price = 3 ;
    int32 rooms = 4 ;
    string status = 5 ;
}